#1624 More work on the prototype.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 
         <h1>This is a page</h1>
         <p>Some page copy.</p>
-
-        <!-- davos-widget-goes-here -->
         
+        <!-- davos-widget-food -->
         <span class="davoswidget" data-widget="food"></span>
+        
+        <!-- davos-widget-water -->
         <span class="davoswidget" data-widget="water"></span>
+
+        <!-- davos-widget-water -->
+        <span class="davoswidget" data-widget="housing"></span>
+
         <!-- The js must go at bottom of the page so it can access the DOM -->
         <script src="davos-widget.js"></script>
         <script>
