Added seperation of CTA data and other data within json files.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- The js must go at bottom of the page so it can access the DOM -->
         <script src="davos-widget.js"></script>
         <script>
-          const davosWidget = new DavosWidget('davos-widget.json');
+          const davosWidget = new DavosWidget('davos-widget-cta.json', 'davos-widget.json');
           davosWidget.setup();
         </script>
 
