--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- davos-widget-water -->
         <span class="davoswidget" data-widget="wages"></span>
 
-        <h2>Text</h2>
+        <h2>currency</h2>
 
         <!-- davos-widget-water -->
         <span class="davoswidget" data-widget="energy"></span>
